--- a/package.json
+++ b/package.json
@@ -11,30 +11,47 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.4.1",
+    "@expo-google-fonts/montserrat": "^0.4.2",
+    "@expo-google-fonts/nunito-sans": "^0.4.2",
     "@expo-google-fonts/poppins": "^0.4.1",
+    "@expo-google-fonts/roboto": "^0.4.1",
     "@expo/vector-icons": "^15.0.2",
+    "@gorhom/bottom-sheet": "^5.2.6",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.13",
+    "expo": "~54.0.25",
+    "expo-auth-session": "~7.0.9",
+    "expo-build-properties": "~1.0.9",
+    "expo-checkbox": "^5.0.7",
     "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.18",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
+    "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.11",
-    "expo-splash-screen": "~31.0.10",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.8",
+    "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "~15.0.9",
+    "firebase": "^12.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-mlkit-ocr": "^0.3.0",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "^4.1.3",
     "react-native-screens": "~4.16.0",
+    "react-native-vision-camera": "^4.7.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
