--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -27,6 +27,7 @@
     "expo": "~54.0.25",
     "expo-auth-session": "~7.0.9",
     "expo-build-properties": "~1.0.9",
+    "expo-camera": "~17.0.9",
     "expo-checkbox": "^5.0.7",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
@@ -45,7 +46,6 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-mlkit-ocr": "^0.3.0",
     "react-native-picker-select": "^9.3.1",
@@ -56,6 +56,7 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
